(2) Some slight changes in cg_check_cov.m.
(3) Changed vbm_vol_eidist.c according to standard gcc.
(4) Recompiled mexfiles.
------------------------------------------------------------------------
r569 | gaser | 2014-02-07 10:45:44

M       CHANGES.txt
M       cg_vbm_batch.m
 M      templates_1.50mm/vbm12.nii

Corrected wrong handling of WMH in cg_vbm_batch.m.
------------------------------------------------------------------------
r570 | gaser | 2014-02-07 11:01:42

M       CHANGES.txt
M       tbx_cfg_vbm.m
M       vbm12.man

removed too li,iting ufilter in tbx_cfg_vbm.m.
------------------------------------------------------------------------
r571 | gaser | 2014-02-10 10:52:27

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man
M       vbm_vol_atlas.m
M       vbm_vol_morph.m
M       vbm_vol_partvol.m
M       vbm_vol_pbt.m
M       vbm_vol_t1qacalc.m

Matlab R2007a does not accept terms such as [~,m] = function.
------------------------------------------------------------------------
r572 | gaser | 2014-02-10 11:09:51

M       CHANGES.txt
M       cg_vbm_batch.m
M       cg_vbm_write.m

(1) Matlab R2007a does not accept catch err in cg_vbm_write.m
(2) Changed hamdling of rmfield in cg_vbm_batch.m
------------------------------------------------------------------------
r573 | gaser | 2014-02-10 17:59:41

M       CHANGES.txt
M       cg_vbm_write.m
M       ds.m
M       templates_1.50mm/vbm12.nii
M       vbm_io_cprintf.m
M       vbm_vol_atlas.m
M       vbm_vol_partvol.m
M       vbm_vol_sanlm.m
M       vbm_vol_t1qacalc.m

(1)  Corrected small errors.
(2)  Corrected vbm12.nii atlas (side error).
------------------------------------------------------------------------
r574 | dahnke | 2014-02-11 14:40:12

M       CHANGES.txt
M       cg_vbm_defs.m

(1) Removed dependence on HDW toolbox in cg_vbm_defs.m
(2) Corrected wrong CAT.win32 folder to CAT.w32.
------------------------------------------------------------------------
r575 | gaser | 2014-03-03 12:56:35